--- a/amUtils.RSA/amUtils.RSA/amUtils.RSA/amUtils.RSA.csproj
+++ b/amUtils.RSA/amUtils.RSA/amUtils.RSA/amUtils.RSA.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PEMToX509.cs" />
     <Compile Include="Operaciones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RsaKeyConvert.cs" />
