--- a/amUtils.RSA.Wrapper/amUtils.RSA.Wrapper/amUtils.RSA.Wrapper.csproj
+++ b/amUtils.RSA.Wrapper/amUtils.RSA.Wrapper/amUtils.RSA.Wrapper.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>x64</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="RGiesecke.DllExport.Metadata, Version=1.0.0.0, Culture=neutral, PublicKeyToken=8f52d83c1a22df51, processorArchitecture=MSIL">
